# infoutils

./: .gitignore  README.md
src/cpuinfo/: cpuinfo.cpp  cpuinfo.hpp  meson.build
src/diskls/: diskls.cpp  diskls.hpp  meson.build
src/meminfo/: meminfo.cpp  meminfo.hpp  meson.build
src/osinfo/: meson.build  osinfo.cpp  osinfo.hpp
